syntax = "proto3";

package signum;

option java_multiple_files = true;
option java_package = "com.phylax.signum";
option java_outer_classname = "TokenProto";

service TokenService {
  rpc GenerateToken (TokenRequest) returns (TokenResponse);
}

message TokenRequest {
  string userId = 1;
}

message TokenResponse {
  string token = 1;
}